# nmm-cli

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
src/: lockfile.rs  main.rs  mod.rs  nexus.rs  nix.rs  provider.rs  query.rs  tests.rs
