[package]
name = "nmm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }

[patch.'https://github.com/sfackler/rust-openssl']
openssl = { git = 'https://github.com/DanielSidhion/rust-openssl.git', branch = 'propagate-openssl-dir-vendored' }
